# SFMLPractice

./: .gitignore  Block.cpp  Block.h  CMakeLists.txt  Enemy.cpp  Enemy.h  Organism.cpp  Organism.h  Player.cpp  Player.h  README.md  Wall.cpp  Wall.h  entity.cpp  entity.h  main.cpp  projectile.cpp  projectile.h  randoms.cpp  textDisplay.cpp  textDisplay.h
cmake_modules/: FindSFML.cmake
helpers/: randoms.cpp  randoms.h
scenes/: GameScene.cpp  GameScene.h  MenuScene.cpp  MenuScene.h  Scene.cpp  Scene.h  Scenes.cpp  Scenes.h  TheEndScene.cpp  TheEndScene.h
